# comptrain-bot

./: Dockerfile  README.md  app.py  deploy.sh  handler.py  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
comptrain/: bot.py
tests/: test_comptrain.py
